--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@vanilla-extract/css": "^1.15",
         "@vanilla-extract/next-plugin": "^2.4",
         "clsx": "*",
-        "next-swagger-doc": "^0.4"
+        "next-swagger-doc": "^0.4",
+        "open-next": "^3.1.2"
     }
 }
