--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
         "@aws-sdk/credential-providers": "^3.665.0",
         "@clerk/nextjs": "^5.6.4",
         "@hookform/resolvers": "^3.9.0",
-        "@mantine/core": "^7.13",
+        "@hookform/devtools": "^4.3.1",
+        "@hookform/resolvers": "^3.9.0",
+        "@mantine/core": "^7.13.2",
+        "@mantine/dates": "^7.12.2",
         "@mantine/form": "^7.13",
         "@mantine/modals": "^7.13",
         "@mantine/notifications": "^7.13.2",
@@ -62,11 +65,15 @@
         "child_process": "^1.0.2",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
+        "dayjs": "^1.11.13",
         "kysely": "^0.27.4",
         "kysely-ctl": "^0.9.0",
         "mantine-datatable": "^7.12.4",
         "mantine-react-table": "^2.0.0-beta.6",
         "next-swagger-doc": "^0.4",
+        "react-hook-form": "^7.53.0",
+        "react-hook-form-mantine": "^3.1.3",
+        "zod": "^3.23.8",
         "pg": "^8.13.0",
         "react-hook-form": "^7.53.0",
         "react-hook-form-mantine": "^3.1.3",
