--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
+        "deploy": "tsx bin/deploy.ts",
         "lint": "next lint && prettier --check .",
         "lint:fix": "next lint --fix && prettier --write .",
         "typecheck": "tsc --noEmit",
@@ -32,6 +33,7 @@
         "happy-dom": "*",
         "npm-run-all": "*",
         "prettier": "*",
+        "tsx": "^4.19.1",
         "vite-tsconfig-paths": "^5.0.1",
         "vitest": "*"
     },
@@ -43,13 +45,16 @@
         "@mantine/core": "^7.12",
         "@mantine/form": "^7.12",
         "@mantine/modals": "^7.12",
+        "@types/pg": "^8.11.10",
         "@vanilla-extract/css": "^1.15",
         "@vanilla-extract/next-plugin": "^2.4",
         "aws-sdk": "^2.1691.0",
         "child_process": "^1.0.2",
         "clsx": "*",
         "dayjs": "^1.11.13",
+        "kysely": "^0.27.4",
         "next-swagger-doc": "^0.4",
-        "open-next": "^3.1.2"
+        "open-next": "^3.1.2",
+        "pg": "^8.13.0"
     }
 }
