--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "next-swagger-doc": "^0.4",
         "react-hook-form": "^7.53.0",
         "react-hook-form-mantine": "^3.1.3",
+        "react-icons": "^5.3.0",
         "zod": "^3.23.8",
         "pg": "^8.13.0",
         "react-hook-form": "^7.53.0",
