--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,25 +6,26 @@ on:
         branches: [main, master]
 jobs:
     all:
-        timeout-minutes: 60
+        timeout-minutes: 15
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-            - uses: actions/setup-node@v4
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Cache Docker layers
+              uses: docker/bake-action@master
               with:
-                  node-version: lts/*
-            - name: Install dependencies
-              run: npm i
-            - name: Lint
-              run: npm run lint
-            - name: Typecheck
-              run: npm run typecheck
-            - name: Unit Test
-              run: npm run test:unit
-            - name: Install Playwright Browsers
-              run: npx playwright install --with-deps
-            - name: Run Playwright tests
-              run: npm run test:e2e
+                  push: false
+                  load: true
+                  files: |-
+                      docker-compose.yml
+                      .github/workflows/gh-docker-compse-cache.json
+
+            - name: Run docker compose
+              run: docker compose up postgres mgmnt-app --wait --detach --wait-timeout 60
+            - name: Run Specs
+              run: docker compose exec mgmnt-app npm run ci
               env:
                   NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ vars.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
                   CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
