--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,11 +7,14 @@ COPY package.json package-lock.json ./
 
 RUN npm install
 
-COPY .editorconfig next.config.mjs tsconfig.json kysely.config.ts .eslintrc.json .prettierrc.json .
+RUN npx playwright install
+RUN npx playwright install-deps
+
+#COPY .gitignore .editorconfig next.config.mjs tsconfig.json kysely.config.ts .eslintrc.json .prettierrc.json .
 
 # Next.js collects completely anonymous telemetry data about general usage. Learn more here: https://nextjs.org/telemetry
 # Uncomment the following line to disable telemetry at run time
-ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_TELEMETRY_DISABLED=1
 
 # for deploting the build version
 
@@ -21,4 +24,4 @@ ENV NEXT_TELEMETRY_DISABLED 1
 
 # OR for sart Next.js in development, comment above two lines and uncomment below line
 
-CMD ./bin/docker-dev-init
+CMD ["./bin/docker-dev-init"]
