--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "devDependencies": {
         "@playwright/test": "^1.47",
         "@testing-library/react": "^16.0",
+        "@types/pg": "^8.11.10",
         "@types/react": "18.3",
         "@vanilla-extract/vite-plugin": "^4.0.16",
         "@vitejs/plugin-react": "^4.3.2",
@@ -42,18 +43,28 @@
     },
     "dependencies": {
         "@clerk/nextjs": "^5.6.4",
+        "@hookform/resolvers": "^3.9.0",
         "@mantine/core": "^7.13",
         "@mantine/form": "^7.13",
         "@mantine/modals": "^7.13",
+        "@mantine/notifications": "^7.13.2",
+        "@tabler/icons-react": "^3.19.0",
+        "@tanstack/react-query": "^5.59.0",
         "@vanilla-extract/css": "^1.16",
         "@vanilla-extract/next-plugin": "^2.4",
         "aws-sdk": "^2.1691.0",
         "child_process": "^1.0.2",
-        "clsx": "*",
+        "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
         "kysely": "^0.27.4",
         "kysely-ctl": "^0.9.0",
+        "mantine-datatable": "^7.12.4",
+        "mantine-react-table": "^2.0.0-beta.6",
         "next-swagger-doc": "^0.4",
-        "pg": "^8.13.0"
+        "pg": "^8.13.0",
+        "react-hook-form": "^7.53.0",
+        "react-hook-form-mantine": "^3.1.3",
+        "remeda": "^2.14.0",
+        "zod": "^3.23.8"
     }
 }
