--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "devDependencies": {
         "@playwright/test": "^1.47",
         "@testing-library/react": "^16.0",
+        "@testing-library/user-event": "^14.5.2",
         "@types/pg": "^8.11.10",
         "@types/react": "18.3",
         "@vanilla-extract/vite-plugin": "^4.0.16",
