--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "ci": "run-p checks test:e2e test:unit",
         "lint": "next lint && prettier --check .",
         "lint:fix": "next lint --fix && prettier --write .",
-        "pre:push": "run-s lint:fix checks",
+        "pre:push": "run-s lint:fix typecheck",
         "typecheck": "tsc --noEmit",
         "update-db-types": "kysely-codegen --out-file src/database/types.ts",
         "checks": "run-p -c typecheck lint",
@@ -44,6 +44,8 @@
         "vitest": "*"
     },
     "dependencies": {
+        "@aws-sdk/client-ecr": "^3.665.0",
+        "@aws-sdk/credential-providers": "^3.665.0",
         "@clerk/nextjs": "^5.6.4",
         "@hookform/resolvers": "^3.9.0",
         "@mantine/core": "^7.13",
@@ -67,6 +69,7 @@
         "react-hook-form": "^7.53.0",
         "react-hook-form-mantine": "^3.1.3",
         "remeda": "^2.14.0",
+        "server-only": "^0.0.1",
         "zod": "^3.23.8"
     }
 }
