--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "@mantine/notifications": "^7.13.2",
         "@tabler/icons-react": "^3.19.0",
         "@tanstack/react-query": "^5.59.0",
+        "@types/uuid": "^10.0.0",
         "@vanilla-extract/css": "^1.16",
         "@vanilla-extract/next-plugin": "^2.4",
         "aws-sdk": "^2.1691.0",
@@ -71,6 +72,7 @@
         "react-hook-form-mantine": "^3.1.3",
         "remeda": "^2.14.0",
         "server-only": "^0.0.1",
+        "uuid": "^10.0.0",
         "zod": "^3.23.8"
     }
 }
