--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "author": "Nathan Stitt",
     "license": "AGPL-3.0-or-later",
     "devDependencies": {
+        "@clerk/testing": "^1.3.10",
         "@playwright/test": "^1.47",
         "@testing-library/react": "^16.0",
         "@testing-library/user-event": "^14.5.2",
