--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,12 @@ services:
             - CI=$CI
             - NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
             - CLERK_SECRET_KEY=$CLERK_SECRET_KEY
-            - E2E_CLERK_USER_USERNAME=$E2E_CLERK_USER_USERNAME
-            - E2E_CLERK_USER_PASSWORD=$E2E_CLERK_USER_PASSWORD
+            - E2E_CLERK_RESEARCHER_EMAIL=$E2E_CLERK_RESEARCHER_EMAIL
+            - E2E_CLERK_RESEARCHER_PASSWORD=$E2E_CLERK_RESEARCHER_PASSWORD
+            - E2E_CLERK_MEMBER_EMAIL=$E2E_CLERK_MEMBER_EMAIL
+            - E2E_CLERK_MEMBER_PASSWORD=$E2E_CLERK_MEMBER_PASSWORD
+            - E2E_CLERK_ADMIN_EMAIL=$E2E_CLERK_ADMIN_EMAIL
+            - E2E_CLERK_ADMIN_PASSWORD=$E2E_CLERK_ADMIN_PASSWORD
             - DATABASE_URL=postgres://mgmnt:mgmntpass@postgres:5432/mgmnt_dev
         build:
             context: .
