--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
             - CI=$CI
             - NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
             - CLERK_SECRET_KEY=$CLERK_SECRET_KEY
+            - AWS_ACCOUNT_ID=$AWS_ACCOUNT_ID
             - E2E_CLERK_RESEARCHER_EMAIL=$E2E_CLERK_RESEARCHER_EMAIL
             - E2E_CLERK_RESEARCHER_PASSWORD=$E2E_CLERK_RESEARCHER_PASSWORD
             - E2E_CLERK_MEMBER_EMAIL=$E2E_CLERK_MEMBER_EMAIL
@@ -42,9 +43,9 @@ services:
         networks:
             - mgmnt-app
         ports:
-            - 3000:3000
+            - 4000:4000
         healthcheck:
-            test: ['CMD-SHELL', 'curl -s http://localhost:3000/']
+            test: ['CMD-SHELL', 'curl -s http://localhost:4000/']
             interval: 30s
             retries: 5
             start_period: 45s
