--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "The SafeInsights management app serves as an interface for researchers to submit and members to approve study proposals.",
     "main": "index.js",
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev -p 4000",
         "build": "next build",
         "start": "next start",
         "deploy": "tsx bin/deploy.ts",
@@ -41,6 +41,7 @@
         "kysely-codegen": "^0.16.8",
         "next-router-mock": "^0.9.13",
         "npm-run-all": "*",
+        "pg-transactional-tests": "^1.2.0",
         "prettier": "*",
         "tsx": "^4.19.1",
         "vite-tsconfig-paths": "^5.0.1",
@@ -48,6 +49,7 @@
     },
     "dependencies": {
         "@aws-sdk/client-ecr": "^3.665.0",
+        "@aws-sdk/client-s3": "^3.670.0",
         "@aws-sdk/credential-providers": "^3.665.0",
         "@clerk/nextjs": "^5.7.1",
         "@hookform/resolvers": "^3.9.0",
@@ -57,6 +59,7 @@
         "@mantine/notifications": "^7.13.2",
         "@tabler/icons-react": "^3.19.0",
         "@tanstack/react-query": "^5.59.0",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/uuid": "^10.0.0",
         "@vanilla-extract/css": "^1.16",
         "@vanilla-extract/next-plugin": "^2.4",
@@ -64,6 +67,7 @@
         "child_process": "^1.0.2",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
+        "jsonwebtoken": "^9.0.2",
         "kysely": "^0.27.4",
         "kysely-ctl": "^0.9.0",
         "mantine-datatable": "^7.12.4",
