--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "next build",
         "start": "next start",
         "deploy": "tsx bin/deploy.ts",
-        "ci": "run-p checks test:e2e test:unit",
+        "ci": "run-p checks test:e2e test:unit build",
         "lint": "next lint && prettier --check .",
         "lint:fix": "next lint --fix && prettier --write .",
         "pre:push": "run-s lint:fix typecheck",
