--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "pg": "^8.13.0",
         "react-hook-form": "^7.53.0",
         "react-hook-form-mantine": "^3.1.3",
+        "react-router-dom": "^6.27.0",
         "remeda": "^2.14.0",
         "server-only": "^0.0.1",
         "uuid": "^10.0.0",
