fix deployment & prod issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,6 @@
             { "ignoreRestSiblings": true, "varsIgnorePattern": "_+", "argsIgnorePattern": "^_" }
         ],
         "semi": ["error", "never"]
-    }
+    },
+    "ignorePatterns": [".next/*"]
 }
