--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "dev": "next dev -p 4000",
         "build": "next build",
+        "build:docker:production": "./bin/prod-docker-build",
         "start": "next start",
         "deploy": "tsx bin/deploy.ts",
         "ci": "run-p checks test:e2e test:unit build",
@@ -50,6 +51,7 @@
     "dependencies": {
         "@aws-sdk/client-ecr": "^3.665.0",
         "@aws-sdk/client-s3": "^3.670.0",
+        "@aws-sdk/client-secrets-manager": "^3.670.0",
         "@aws-sdk/credential-providers": "^3.665.0",
         "@clerk/nextjs": "^5.7.1",
         "@hookform/resolvers": "^3.9.0",
@@ -57,6 +59,7 @@
         "@mantine/form": "^7.13",
         "@mantine/modals": "^7.13",
         "@mantine/notifications": "^7.13.2",
+        "@sentry/nextjs": "^8.34.0",
         "@tabler/icons-react": "^3.19.0",
         "@tanstack/react-query": "^5.59.0",
         "@types/jsonwebtoken": "^9.0.7",
