--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
         "dev": "next dev -p 4000",
         "build": "next build",
         "build:docker:production": "./bin/prod-docker-build",
+        "build:docker:ci": "./bin/prod-docker-build ci-only-do-not-push",
         "start": "next start",
         "deploy": "tsx bin/deploy.ts",
-        "ci": "run-p checks test:e2e test:unit build",
+        "ci": "run-p checks test:e2e test:unit",
         "lint": "next lint && prettier --check .",
         "lint:fix": "next lint --fix && prettier --write .",
         "pre:push": "run-s lint:fix typecheck",
