--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "@mantine/form": "^7.13",
         "@mantine/modals": "^7.13",
         "@mantine/notifications": "^7.13.2",
+        "@mantinex/dev-icons": "^1.0.2",
         "@sentry/nextjs": "^8.34.0",
         "@tabler/icons-react": "^3.19.0",
         "@tanstack/react-query": "^5.59.0",
@@ -71,6 +72,7 @@
         "child_process": "^1.0.2",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
+        "highlight.js": "^11.10.0",
         "jsonwebtoken": "^9.0.2",
         "kysely": "^0.27.4",
         "kysely-ctl": "^0.9.0",
