--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "@testing-library/user-event": "^14.5.2",
         "@types/pg": "^8.11.10",
         "@types/react": "18.3",
+        "@typescript-eslint/eslint-plugin": "^8.13.0",
+        "@typescript-eslint/parser": "^8.13.0",
         "@vanilla-extract/vite-plugin": "^4.0.16",
         "@vitejs/plugin-react": "^4.3.2",
         "@vitest/coverage-v8": "^2.1.1",
