--- a/package.json
+++ b/package.json
@@ -79,11 +79,10 @@
         "kysely": "^0.27.4",
         "kysely-ctl": "^0.9.0",
         "mantine-datatable": "^7.12.4",
+        "mantine-form-zod-resolver": "^1.1.0",
         "mantine-react-table": "^2.0.0-beta.6",
         "next-swagger-doc": "^0.4",
         "pg": "^8.13.0",
-        "react-hook-form": "^7.53.0",
-        "react-hook-form-mantine": "^3.1.3",
         "react-icons": "^5.3.0",
         "remeda": "^2.14.0",
         "server-only": "^0.0.1",
