--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
         "@aws-sdk/client-s3": "^3.670.0",
         "@aws-sdk/client-secrets-manager": "^3.670.0",
         "@aws-sdk/credential-providers": "^3.665.0",
+        "@aws-sdk/lib-storage": "^3.687.0",
+        "@aws-sdk/s3-request-presigner": "^3.687.0",
         "@clerk/nextjs": "^5.7.1",
+        "@faker-js/faker": "^9.2.0",
         "@hookform/resolvers": "^3.9.0",
         "@mantine/core": "^7.13",
         "@mantine/form": "^7.13",
