--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "rules": {
         "no-console": ["error", { "allow": ["warn", "error"] }],
         "no-unused-vars": [
-            "warn",
+            "error",
             { "ignoreRestSiblings": true, "varsIgnorePattern": "_+", "argsIgnorePattern": "^_" }
         ],
         "semi": ["error", "never"]
