--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "@tabler/icons-react": "^3.19.0",
         "@tanstack/react-query": "^5.59.0",
         "@types/jsonwebtoken": "^9.0.7",
+        "@types/papaparse": "^5.3.15",
         "@types/uuid": "^10.0.0",
         "@vanilla-extract/css": "^1.16",
         "@vanilla-extract/next-plugin": "^2.4",
@@ -88,6 +89,7 @@
         "mantine-form-zod-resolver": "^1.1.0",
         "mantine-react-table": "^2.0.0-beta.6",
         "next-swagger-doc": "^0.4",
+        "papaparse": "^5.4.1",
         "pg": "^8.13.0",
         "react-icons": "^5.3.0",
         "remeda": "^2.14.0",
