--- a/package.json
+++ b/package.json
@@ -25,58 +25,60 @@
     "author": "Nathan Stitt",
     "license": "AGPL-3.0-or-later",
     "devDependencies": {
-        "@clerk/testing": "^1.3.10",
-        "@playwright/test": "^1.47",
+        "@clerk/testing": "^1.3.27",
+        "@playwright/test": "^1.49",
         "@testing-library/react": "^16.0",
         "@testing-library/user-event": "^14.5.2",
         "@types/debug": "^4.1.12",
         "@types/pg": "^8.11.10",
         "@types/react": "18.3",
-        "@typescript-eslint/eslint-plugin": "^8.13.0",
-        "@typescript-eslint/parser": "^8.13.0",
-        "@vanilla-extract/vite-plugin": "^4.0.16",
-        "@vitejs/plugin-react": "^4.3.2",
-        "@vitest/coverage-v8": "^2.1.1",
+        "@typescript-eslint/eslint-plugin": "^8.15.0",
+        "@typescript-eslint/parser": "^8.15.0",
+        "@vanilla-extract/vite-plugin": "^4.0.17",
+        "@vitejs/plugin-react": "^4.3.3",
+        "@vitest/coverage-v8": "^2.1.5",
         "dotenv": "*",
         "esbuild": "^0.24.0",
         "eslint": "*",
         "eslint-config-next": "*",
         "eslint-config-prettier": "*",
         "happy-dom": "*",
-        "kysely-codegen": "^0.16.8",
+        "kysely-codegen": "^0.17.0",
         "next-router-mock": "^0.9.13",
         "npm-run-all": "*",
         "pg-transactional-tests": "^1.2.0",
         "prettier": "*",
-        "tsx": "^4.19.1",
-        "vite-tsconfig-paths": "^5.0.1",
+        "tsx": "^4.19.2",
+        "vite-tsconfig-paths": "^5.1.3",
         "vitest": "*"
     },
     "dependencies": {
-        "@aws-sdk/client-ecr": "^3.665.0",
-        "@aws-sdk/client-s3": "^3.670.0",
-        "@aws-sdk/client-secrets-manager": "^3.670.0",
-        "@aws-sdk/credential-providers": "^3.665.0",
-        "@aws-sdk/lib-storage": "^3.687.0",
-        "@aws-sdk/s3-request-presigner": "^3.687.0",
-        "@clerk/nextjs": "^5.7.1",
+        "@aws-sdk/client-ecr": "^3.696.0",
+        "@aws-sdk/client-s3": "^3.697.0",
+        "@aws-sdk/client-secrets-manager": "^3.696.0",
+        "@aws-sdk/credential-providers": "^3.696.0",
+        "@aws-sdk/lib-storage": "^3.697.0",
+        "@aws-sdk/s3-presigned-post": "^3.697.0",
+        "@aws-sdk/s3-request-presigner": "^3.697.0",
+        "@clerk/nextjs": "^6.4.0",
         "@faker-js/faker": "^9.2.0",
-        "@hookform/resolvers": "^3.9.0",
-        "@mantine/core": "^7.13",
-        "@mantine/form": "^7.13",
-        "@mantine/modals": "^7.13",
-        "@mantine/notifications": "^7.13.2",
+        "@hookform/resolvers": "^3.9.1",
+        "@mantine/core": "^7.14",
+        "@mantine/dropzone": "^7.14.1",
+        "@mantine/form": "^7.14",
+        "@mantine/modals": "^7.14",
+        "@mantine/notifications": "^7.14.1",
         "@mantinex/dev-icons": "^1.0.2",
-        "@sentry/nextjs": "^8.34.0",
-        "@tabler/icons-react": "^3.19.0",
-        "@tanstack/react-query": "^5.59.0",
+        "@sentry/nextjs": "^8.39.0",
+        "@tabler/icons-react": "^3.22.0",
+        "@tanstack/react-query": "^5.61.0",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/papaparse": "^5.3.15",
         "@types/uuid": "^10.0.0",
         "@vanilla-extract/css": "^1.16",
         "@vanilla-extract/next-plugin": "^2.4",
         "aws-iam-policy-types": "^1.0.1",
-        "aws-sdk": "^2.1691.0",
+        "aws-sdk": "^2.1692.0",
         "child_process": "^1.0.2",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
@@ -87,14 +89,13 @@
         "kysely-ctl": "^0.9.0",
         "mantine-datatable": "^7.12.4",
         "mantine-form-zod-resolver": "^1.1.0",
-        "mantine-react-table": "^2.0.0-beta.6",
         "next-swagger-doc": "^0.4",
         "papaparse": "^5.4.1",
-        "pg": "^8.13.0",
+        "pg": "^8.13.1",
         "react-icons": "^5.3.0",
-        "remeda": "^2.14.0",
+        "remeda": "^2.17.3",
         "server-only": "^0.0.1",
-        "uuid": "^10.0.0",
+        "uuid": "^11.0.3",
         "zod": "^3.23.8"
     }
 }
