--- a/package.json
+++ b/package.json
@@ -27,58 +27,60 @@
         "pre:commit": "npx lint-staged"
     },
     "dependencies": {
-        "@aws-sdk/client-ecr": "^3.665.0",
-        "@aws-sdk/client-s3": "^3.670.0",
-        "@aws-sdk/client-secrets-manager": "^3.670.0",
-        "@aws-sdk/credential-providers": "^3.665.0",
-        "@aws-sdk/lib-storage": "^3.687.0",
-        "@aws-sdk/s3-request-presigner": "^3.687.0",
-        "@clerk/nextjs": "^6.9.1",
-        "@faker-js/faker": "^9.2.0",
-        "@hookform/resolvers": "^3.9.0",
+        "@aws-sdk/client-ecr": "^3.712.0",
+        "@aws-sdk/client-s3": "^3.712.0",
+        "@aws-sdk/credential-provider-ini": "^3.712.0",
+        "@aws-sdk/lib-storage": "^3.712.0",
+        "@aws-sdk/s3-request-presigner": "^3.712.0",
+        "@clerk/nextjs": "^6.9.2",
+        "@faker-js/faker": "^9.3.0",
+        "@hookform/resolvers": "^3.9.1",
         "@mantine/core": "^7.15",
         "@mantine/form": "^7.15",
         "@mantine/modals": "^7.15",
-        "@mantine/notifications": "^7.13.2",
-        "@mantinex/dev-icons": "^1.0.2",
-        "@sentry/nextjs": "^8.34.0",
-        "@tabler/icons-react": "^3.19.0",
-        "@tanstack/react-query": "^5.59.0",
+        "@mantine/notifications": "^7.15.1",
+        "@mantinex/dev-icons": "^1.1.0",
+        "@sentry/nextjs": "^8.45.0",
+        "@tabler/icons-react": "^3.24.0",
+        "@tanstack/react-query": "^5.62.7",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/papaparse": "^5.3.15",
         "@types/uuid": "^10.0.0",
         "@vanilla-extract/css": "^1.16",
         "@vanilla-extract/next-plugin": "^2.4",
         "aws-iam-policy-types": "^1.0.1",
-        "aws-sdk": "^2.1691.0",
+        "aws-sdk": "^2.1692.0",
         "child_process": "^1.0.2",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
-        "debug": "^4.3.7",
+        "debug": "^4.4.0",
         "highlight.js": "^11.10.0",
         "jsonwebtoken": "^9.0.2",
-        "kysely": "^0.27.4",
+        "kysely": "^0.27.5",
         "kysely-ctl": "^0.9.0",
-        "mantine-datatable": "^7.12.4",
+        "mantine-datatable": "^7.14.5",
         "mantine-form-zod-resolver": "^1.1.0",
         "next": "15.1.0",
         "next-swagger-doc": "^0.4",
         "papaparse": "^5.4.1",
-        "pg": "^8.13.0",
+        "pg": "^8.13.1",
         "react": "19.0.0",
         "react-dom": "19.0.0",
-        "react-icons": "^5.3.0",
-        "remeda": "^2.14.0",
+        "react-icons": "^5.4.0",
+        "remeda": "^2.17.4",
         "server-only": "^0.0.1",
-        "uuid": "^10.0.0",
-        "zod": "^3.23.8"
+        "uuid": "^11.0.3",
+        "zod": "^3.24.1"
     },
     "devDependencies": {
+        "@clerk/testing": "^1.4.2",
         "@eslint/js": "^9.16.0",
         "@next/eslint-plugin-next": "^15.1.0",
         "@pandacss/dev": "^0.49.0",
         "@playwright/test": "^1.49",
         "@testing-library/react": "^16.1",
+        "@testing-library/user-event": "^14.5.2",
+        "@types/debug": "^4.1.12",
         "@types/react": "19.0.1",
         "@vanilla-extract/vite-plugin": "^4.0.18",
         "@vitejs/plugin-react": "^4.3.4",
@@ -90,14 +92,14 @@
         "eslint-plugin-react": "^7.37.2",
         "globals": "^15.13.0",
         "happy-dom": "*",
-        "husky": "^9.1.6",
-        "kysely-codegen": "^0.16.8",
-        "lint-staged": "^15.2.10",
+        "husky": "^9.1.7",
+        "kysely-codegen": "^0.17.0",
+        "lint-staged": "^15.2.11",
         "next-router-mock": "^0.9.13",
         "npm-run-all": "*",
         "pg-transactional-tests": "^1.2.0",
         "prettier": "*",
-        "tsx": "^4.19.1",
+        "tsx": "^4.19.2",
         "typescript-eslint": "^8.18.0",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "*"
