--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,7 @@ phases:
   build:
     commands:
       - echo Doing nothing...
+      - echo Doing more nothing...
       - echo Done.
 artifacts:
   files:
