--- a/package.json
+++ b/package.json
@@ -27,22 +27,22 @@
         "pre:commit": "npx lint-staged"
     },
     "dependencies": {
-        "@aws-sdk/client-ecr": "^3.712.0",
-        "@aws-sdk/client-s3": "^3.712.0",
-        "@aws-sdk/credential-provider-ini": "^3.712.0",
-        "@aws-sdk/lib-storage": "^3.712.0",
-        "@aws-sdk/s3-request-presigner": "^3.712.0",
-        "@clerk/nextjs": "^6.9.2",
+        "@aws-sdk/client-ecr": "^3.721.0",
+        "@aws-sdk/client-s3": "^3.722.0",
+        "@aws-sdk/credential-provider-ini": "^3.721.0",
+        "@aws-sdk/lib-storage": "^3.722.0",
+        "@aws-sdk/s3-request-presigner": "^3.722.0",
+        "@clerk/nextjs": "^6.9.6",
         "@faker-js/faker": "^9.3.0",
         "@hookform/resolvers": "^3.9.1",
         "@mantine/core": "^7.15",
         "@mantine/form": "^7.15",
         "@mantine/modals": "^7.15",
-        "@mantine/notifications": "^7.15.1",
+        "@mantine/notifications": "^7.15.2",
         "@mantinex/dev-icons": "^1.1.0",
-        "@sentry/nextjs": "^8.45.0",
-        "@tabler/icons-react": "^3.24.0",
-        "@tanstack/react-query": "^5.62.7",
+        "@sentry/nextjs": "^8.47.0",
+        "@tabler/icons-react": "^3.27.1",
+        "@tanstack/react-query": "^5.62.15",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/papaparse": "^5.3.15",
         "@types/uuid": "^10.0.0",
@@ -52,71 +52,54 @@
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
         "debug": "^4.4.0",
-        "highlight.js": "^11.10.0",
+        "highlight.js": "^11.11.1",
         "jsonwebtoken": "^9.0.2",
         "kysely": "^0.27.5",
-        "kysely-ctl": "^0.9.0",
-        "mantine-datatable": "^7.14.5",
+        "kysely-ctl": "^0.10.1",
+        "mantine-datatable": "^7.15.1",
         "mantine-form-zod-resolver": "^1.1.0",
-        "next": "15.1.0",
+        "next": "15.1.3",
         "next-swagger-doc": "^0.4",
         "papaparse": "^5.4.1",
         "pg": "^8.13.1",
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-icons": "^5.4.0",
-        "remeda": "^2.17.4",
+        "remeda": "^2.19.0",
         "server-only": "^0.0.1",
-        "uuid": "^11.0.3",
+        "uuid": "^11.0.4",
         "zod": "^3.24.1"
     },
     "devDependencies": {
-        "@clerk/testing": "^1.4.2",
-        "@eslint/js": "^9.16.0",
-        "@next/eslint-plugin-next": "^15.1.0",
-        "@pandacss/dev": "^0.49.0",
+        "@clerk/testing": "^1.4.4",
+        "@eslint/js": "^9.17.0",
+        "@next/eslint-plugin-next": "^15.1.3",
+        "@pandacss/dev": "^0.51.1",
         "@playwright/test": "^1.49",
         "@testing-library/react": "^16.1",
         "@testing-library/user-event": "^14.5.2",
         "@types/debug": "^4.1.12",
-        "@types/react": "19.0.1",
+        "@types/react": "19.0.3",
         "@vitejs/plugin-react": "^4.3.4",
         "@vitest/coverage-v8": "^2.1.8",
         "dotenv": "*",
-        "eslint": "^9.16.0",
+        "eslint": "^9.17.0",
         "eslint-config-next": "*",
         "eslint-config-prettier": "*",
-        "eslint-plugin-react": "^7.37.2",
-        "globals": "^15.13.0",
+        "eslint-plugin-react": "^7.37.3",
+        "globals": "^15.14.0",
         "happy-dom": "*",
         "husky": "^9.1.7",
         "kysely-codegen": "^0.17.0",
-        "lint-staged": "^15.2.11",
+        "lint-staged": "^15.3.0",
         "next-router-mock": "^0.9.13",
         "npm-run-all": "*",
         "pg-transactional-tests": "^1.2.0",
         "prettier": "*",
         "tsx": "^4.19.2",
-        "typescript-eslint": "^8.18.0",
+        "typescript-eslint": "^8.19.1",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "*"
     },
-    "overrides": {
-        "react-remove-scroll": {
-            "react": "^19.0.0"
-        },
-        "use-callback-ref": {
-            "react": "^19.0.0"
-        },
-        "react-textarea-autosize": {
-            "react": "^19.0.0"
-        },
-        "react-number-format": {
-            "react": "^19.0.0",
-            "react-dom": "^19.0.0"
-        },
-        "swr": {
-            "react": "^19.0.0"
-        }
-    }
+    "overrides": {}
 }
