--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,15 +9,11 @@ env:
 phases:
     pre_build:
         commands:
+            - npm install -g npm
             - npm install
-        #   - echo Logging in to Amazon ECR...
-        #   - echo Login is still required
-        #   - aws ecr get-login-password --region $REGION  | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com
-        #   - echo GITHUB_TAG is $GITHUB_TAG
 
     build:
         commands:
-            - echo Linting...
             - npm run lint
             - echo Done.
 
