--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@aws-sdk/client-ecr": "^3.741.0",
         "@aws-sdk/client-s3": "^3.741.0",
+        "@aws-sdk/client-sts": "^3.741.0",
         "@aws-sdk/credential-provider-ini": "^3.741.0",
         "@aws-sdk/lib-storage": "^3.741.0",
         "@aws-sdk/s3-presigned-post": "^3.741.0",
