--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "next-swagger-doc": "^0.4",
         "papaparse": "^5.5.2",
         "pg": "^8.13.1",
+        "qrcode.react": "^4.2.0",
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-icons": "^5.4.0",
@@ -86,7 +87,6 @@
         "@types/debug": "^4.1.12",
         "@types/react": "19.0.8",
         "@vitejs/plugin-react": "^4.3.4",
-        "@vitest/coverage-v8": "^3.0.5",
         "dotenv": "*",
         "eslint": "^9.19.0",
         "eslint-config-next": "*",
@@ -107,5 +107,6 @@
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "*",
         "vitest-monocart-coverage": "^3.0.0"
-    }
+    },
+    "overrides": {}
 }
