--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -40,10 +40,11 @@ jobs:
               run: |
                   cat tmp/code-coverage/merged/coverage-summary.md >> $GITHUB_STEP_SUMMARY
                   cat tmp/code-coverage/merged/coverage-details.md >> $GITHUB_STEP_SUMMARY
-            - name: Add comment to PR
-              uses: mshick/add-pr-comment@v2
+            - name: Coverage Diff
+              uses: greatwizard/coverage-diff-action@v1
               with:
-                  message-path: tmp/code-coverage/merged/coverage-summary.md
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  coverage-filename: tmp/code-coverage/merged/coverage-summary.json
             - name: Test build
               run: |
                   echo NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }} > .env
