--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -40,6 +40,12 @@ jobs:
               run: |
                   cat tmp/code-coverage/merged/coverage-summary.md >> $GITHUB_STEP_SUMMARY
                   cat tmp/code-coverage/merged/coverage-details.md >> $GITHUB_STEP_SUMMARY
+            - name: Coverage Diff
+              uses: bultkrantz/coverage-diff-action@v5
+              if: always()
+              with:
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  coverage-filename: tmp/code-coverage/merged/coverage-summary.json
             - name: Test build
               run: |
                   echo NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }} > .env
