--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ yarn-error.log*
 .npm
 .eslintcache
 package-lock.json
-coverage/
+tests/coverage/
 playwright-report/
 src/styles/generated
 ./tests/fixtures/temp/large-file
