use recommended config for coverage diff

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,10 +1,9 @@
 name: Checks
 on:
     push:
-
-    pull_request:
-        types:
-            - closed
+        branches:
+            - main
+    pull_request: {}
 
 jobs:
     all:
