add blank permissions as suggested by CodeQL

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,6 +9,7 @@ jobs:
     lint:
         timeout-minutes: 5
         runs-on: ubuntu-latest
+        permissions: {}
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v4
@@ -107,6 +108,7 @@ jobs:
     build:
         timeout-minutes: 15
         runs-on: ubuntu-latest
+        permissions: {}
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v4
